--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+# Auto detect text files and perform LF normalization
+* text=auto eol=lf
 /.yarn/**            linguist-vendored
 /.yarn/releases/*    binary
 /.yarn/plugins/**/*  binary
