--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .yarn/*
-dist/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
@@ -10,3 +9,4 @@ dist/*
 # Documentation here: https://yarnpkg.com/features/zero-installs
 # !.yarn/cache
 .pnp.*
+.env
