--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "name": "vendorfiles",
+  "author": "Araxeus",
+  "description": "A CLI tool to manage vendor files",
+  "license": "MIT",
+  "repository": "https://github.com/Araxeus/vendorfiles",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": [
+    "vendor files",
+    "package manager",
+    "github assets"
+  ],
   "packageManager": "yarn@3.5.0",
   "type": "module",
   "version": "1.0.0-alpha.4",
@@ -46,7 +58,7 @@
           "LICENSE": "COOLTIPZ_LICENSE"
         }
       ],
-      "vendorFolder": "{vendorFolder}"
+      "vendorFolder": "{vendorFolder}/Cooltipz"
     },
     "Coloris": {
       "name": "Coloris",
