--- a/package.json
+++ b/package.json
@@ -2,25 +2,14 @@
   "name": "vendorfiles",
   "author": "Araxeus",
   "description": "A CLI tool to manage vendor files",
+  "version": "1.0.0-alpha.6",
+  "type": "module",
   "license": "MIT",
   "repository": "https://github.com/Araxeus/vendorfiles",
   "engines": {
     "node": ">=16.0.0"
   },
-  "keywords": [
-    "vendor files",
-    "package manager",
-    "github assets"
-  ],
   "packageManager": "yarn@3.5.0",
-  "type": "module",
-  "version": "1.0.0-alpha.4",
-  "scripts": {
-    "start": "tsc && node ./dist/cli.js",
-    "test": "tsc && node ./dist/test.js",
-    "build": "tsc",
-    "check": "tsc --noEmit && rome ci ."
-  },
   "files": [
     "dist"
   ],
@@ -32,6 +21,21 @@
       "import": "./dist/index.js"
     }
   },
+  "keywords": [
+    "vendor",
+    "vendor-files",
+    "package-manager",
+    "github-assets",
+    "cli-app",
+    "cli"
+  ],
+  "scripts": {
+    "start": "tsc && node ./dist/cli.js",
+    "test": "tsc && node ./dist/test.js",
+    "build": "tsc",
+    "check": "tsc --noEmit && rome ci ."
+  },
+
   "dependencies": {
     "@commander-js/extra-typings": "^10.0.3",
     "@octokit/rest": "^19.0.7",
