--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "build": "tsc",
     "check": "tsc --noEmit && rome ci ."
   },
-
   "dependencies": {
     "@commander-js/extra-typings": "^10.0.3",
     "@octokit/rest": "^19.0.7",
@@ -47,12 +46,25 @@
     "write-pkg": "^5.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.5",
+    "@types/node": "^18.15.6",
     "@types/parse-json": "^4.0.0",
     "rome": "^11.0.0",
     "typescript": "^5.0.2"
   },
   "vendorDependencies": {
+    "youtube-volume-scroll": {
+      "name": "youtube-volume-scroll",
+      "version": "v3.1.0",
+      "repository": "https://github.com/Araxeus/Youtube-Volume-Scroll",
+      "files": [
+        "external_assets/popup-light.png",
+        "{release}/youtube-volume-scroll_{version}_chromium.crx",
+        {
+          "LICENSE": "ytvs_LICENSE",
+          "{release}/youtube-volume-scroll_{version}_firefox.xpi": "ytvs_{version}_firefox.xpi"
+        }
+      ]
+    },
     "Cooltipz.css": {
       "version": "v2.2.1",
       "repository": "https://github.com/jackdomleo7/Cooltipz.css",
