--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.pnp.*
+.env
+dist/*
+vendor/*
+dist/index.js
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -5,9 +10,3 @@
 !.yarn/sdks
 !.yarn/versions
 
-# Swap the comments on the following lines if you don't wish to use zero-installs
-# Documentation here: https://yarnpkg.com/features/zero-installs
-# !.yarn/cache
-.pnp.*
-.env
-vendor/*
