--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "tsc && node ./dist/test.js",
     "build": "tsc",
     "format": "rome format . --write",
-    "check": "tsc --noEmit && rome ci .",
+    "check": "tsc --noEmit && rome ci . && yarn start sync",
     "publish": "yarn check && yarn npm publish"
   },
   "dependencies": {
