--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "bin": {
     "vendor": "./dist/cli.js"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
   },
@@ -30,9 +33,9 @@
     "cli"
   ],
   "scripts": {
-    "start": "tsc && node ./dist/cli.js",
-    "test": "tsc && node ./dist/test.js",
-    "build": "tsc",
+    "start": "yarn build && node dist/cli.js",
+    "test": "yarn build && node dist/test.js",
+    "build": "del-cli dist && tsc && cpy lib/auth.js lib/types.d.ts dist",
     "format": "rome format . --write",
     "check": "tsc --noEmit && rome ci . && yarn start sync",
     "publish": "yarn check && yarn npm publish"
@@ -40,20 +43,24 @@
   "dependencies": {
     "@commander-js/extra-typings": "^10.0.3",
     "@ltd/j-toml": "^1.38.0",
+    "@octokit/auth-oauth-device": "^4.0.4",
     "@octokit/rest": "^19.0.7",
     "ci-info": "^3.8.0",
     "commander": "^10.0.0",
     "detect-indent": "^7.0.1",
     "dotenv": "^16.0.3",
+    "open": "^9.1.0",
     "parse-json": "^6.0.2",
     "unarchive": "^1.1.1",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
-    "@types/node": "^18.15.9",
+    "@types/node": "^18.15.10",
     "@types/parse-json": "^4.0.0",
+    "cpy-cli": "^4.2.0",
+    "del-cli": "^5.0.0",
     "rome": "^11.0.0",
-    "type-fest": "^3.7.0",
+    "type-fest": "^3.7.1",
     "typescript": "^5.0.2"
   },
   "vendorDependencies": {
