--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "del-cli": "^5.1.0",
     "rome": "^12.1.3",
     "type-fest": "^4.3.1",
-    "typescript": "^5.2.2"
+    "typescript": "=5.0.4"
   },
   "vendorDependencies": {
     "fzf": {
