--- a/biome.json
+++ b/biome.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
   "files": {
     "ignore": [
       "./.pnp.*",
@@ -12,10 +13,15 @@
       "quoteStyle": "single"
     }
   },
+  "json": {
+    "formatter": {
+      "enabled": false
+    }
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
-    "indentSize": 4,
+    "indentWidth": 4,
     "ignore": [
       "*.json"
     ]
