--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "start": "yarn build && node dist/cli.js",
     "test": "yarn build && node dist/test.js",
     "build": "del-cli dist && tsc && cpy lib/auth.js lib/types.d.ts dist",
-    "format": "rome format . --write",
-    "check": "tsc --noEmit && rome ci . && yarn start sync",
+    "format": "biome format . --write",
+    "check": "tsc --noEmit && biome ci . && yarn start sync",
     "publish": "yarn check && yarn npm publish"
   },
   "dependencies": {
@@ -56,12 +56,12 @@
     "yaml": "^2.3.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.7.3",
     "@types/make-fetch-happen": "^10.0.1",
     "@types/node": "^20.6.2",
     "@types/parse-json": "^4.0.0",
     "cpy-cli": "^5.0.0",
     "del-cli": "^5.1.0",
-    "rome": "^12.1.3",
     "type-fest": "^4.3.1",
     "typescript": "=5.0.4"
   },
