--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "repository": "https://github.com/Araxeus/vendorfiles",
   "engines": {
-    "node": ">=17.0.0"
+    "node": ">=18.0.0",
+    "npm": "please-use-yarnv4+",
+    "yarn": ">4"
   },
-  "packageManager": "yarn@3.6.3",
+  "packageManager": "yarn@4.2.2",
   "files": [
     "dist"
   ],
