--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,13 +11,7 @@ jobs:
   Check:
     runs-on: ubuntu-latest
     steps:
-      - name: Yarn PnP Setup
-        uses: Araxeus/setup-yarn-pnp-action@v1
-
-      - name: Run Checks
-        run: yarn check
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Run build
-        run: yarn build
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install
+      - run: bun check
