--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "type": "module",
   "license": "MIT",
   "repository": "https://github.com/Araxeus/vendorfiles",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "packageManager": "yarn@4.2.2",
+  "homepage": "https://github.com/Araxeus/vendorfiles",
+  "packageManager": "bun@1.1.21",
   "files": [
     "dist"
   ],
@@ -33,18 +31,17 @@
     "cli"
   ],
   "scripts": {
-    "start": "yarn build && node dist/cli.js",
-    "test": "yarn build && node dist/test.js",
-    "build": "del-cli dist && tsc && cpy lib/auth.js lib/types.d.ts dist",
-    "format": "biome format . --write",
-    "check": "tsc --noEmit && biome ci . && yarn start sync",
-    "publish": "yarn check && yarn npm publish"
+    "start": "bun b && bun dist/cli.js",
+    "b": "del-cli dist && tsc && bun cpy lib/auth.js lib/types.d.ts dist",
+    "lint": "bun biome check --write",
+    "check": "tsc --noEmit && bun biome ci && bun start sync",
+    "publish": "bun check && npm publish"
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.1.0",
     "@ltd/j-toml": "^1.38.0",
     "@octokit/auth-oauth-device": "^7.1.1",
-    "@octokit/rest": "^20.1.1",
+    "@octokit/rest": "^21.0.1",
     "commander": "^12.1.0",
     "detect-indent": "^7.0.1",
     "dotenv": "^16.4.5",
@@ -52,18 +49,18 @@
     "make-fetch-happen": "^13.0.1",
     "open": "^10.1.0",
     "parse-json": "^8.1.0",
-    "unarchive": "^1.1.2",
-    "yaml": "^2.4.2"
+    "unarchive": "^1.1.3",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.7.3",
+    "@biomejs/biome": "^1.8.3",
     "@types/make-fetch-happen": "^10.0.4",
-    "@types/node": "^20.12.13",
+    "@types/node": "^22.1.0",
     "@types/parse-json": "^4.0.2",
     "cpy-cli": "^5.0.0",
     "del-cli": "^5.1.0",
-    "type-fest": "^4.18.3",
-    "typescript": "=5.0.4"
+    "type-fest": "^4.23.0",
+    "typescript": "^5.5.4"
   },
   "vendorDependencies": {
     "fzf": {
@@ -125,5 +122,8 @@
   },
   "vendorConfig": {
     "vendorFolder": "./vendor"
-  }
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
