--- a/biome.json
+++ b/biome.json
@@ -1,49 +1,46 @@
 {
-  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "organizeImports": {
-		"enabled": true
-	},
-  "files": {
-    "ignore": [
-      "./node_modules/**",
-      "./dist/*",
-      "./vendor/*",
-      "./lib/auth.js"
-    ]
-  },
-  "javascript": {
+    "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+    "assist": { "actions": { "source": { "organizeImports": "on" } } },
+    "files": {
+        "includes": [
+            "**",
+            "!node_modules",
+            "!dist",
+            "!vendor",
+            "!lib/auth.js"
+        ]
+    },
+    "javascript": {
+        "formatter": {
+            "quoteStyle": "single",
+            "arrowParentheses": "asNeeded"
+        }
+    },
+    "json": {
+        "formatter": {
+            "enabled": false
+        }
+    },
     "formatter": {
-      "quoteStyle": "single",
-      "arrowParentheses": "asNeeded"
+        "enabled": true,
+        "indentStyle": "space",
+        "indentWidth": 4,
+        "includes": ["**", "!**/*.json"]
+    },
+    "linter": {
+        "enabled": true,
+        "rules": {
+            "recommended": true,
+            "correctness": {
+                "noUndeclaredVariables": "error",
+                "noUnusedVariables": "error"
+            },
+            "style": {
+                "noParameterAssign": "off"
+            },
+            "nursery": {
+                "recommended": true
+            }
+        }
     }
-  },
-  "json": {
-    "formatter": {
-      "enabled": false
-    }
-  },
-  "formatter": {
-    "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 4,
-    "ignore": [
-      "*.json"
-    ]
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "correctness": {
-        "noUndeclaredVariables": "error",
-        "noUnusedVariables": "error"
-      },
-      "style": {
-        "noParameterAssign": "off"
-      },
-      "nursery": {
-        "recommended": true
-      }
-    }
-  }
 }
