--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   },
   "dependencies": {
     "@commander-js/extra-typings": "^14.0.0",
-    "@ltd/j-toml": "^1.38.0",
     "@octokit/auth-oauth-device": "^8.0.3",
     "@octokit/rest": "^22.0.1",
     "commander": "^14.0.2",
@@ -49,6 +48,7 @@
     "make-fetch-happen": "^15.0.3",
     "open": "^11.0.0",
     "parse-json": "^8.3.0",
+    "smol-toml": "^1.5.2",
     "unarchive": "^1.1.4",
     "yaml": "^2.8.1"
   },
