--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,3 +15,5 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       - run: bun install
       - run: bun check
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
