use keyring instead of obfuscated auth

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
             "!node_modules",
             "!dist",
             "!vendor",
-            "!lib/auth.js"
+            "!.ignore"
         ]
     },
     "javascript": {
