--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
     "@inquirer/prompts": "^8.0.2",
+    "@types/bun": "^1.3.3",
     "@types/make-fetch-happen": "^10.0.4",
     "@types/node": "^24.10.1",
     "@types/parse-json": "^7.0.0",
