--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "start": "bun b && bun dist/cli.js",
     "b": "bun scripts/delete-dist.ts && tsc",
-    "lint": "bun biome check --write",
+    "lint": "biome check --write",
+    "format": "biome format --write",
     "check": "tsc --noEmit && bun biome check && bun start sync",
     "release": "bun check && bun b && bun scripts/release.ts"
   },
