--- a/package.json
+++ b/package.json
@@ -32,18 +32,19 @@
   ],
   "scripts": {
     "start": "bun b && bun dist/cli.js",
-    "b": "del-cli dist && tsc && bun cpy lib/auth.js lib/types.d.ts dist",
-    "lint": "bun biome check --write",
-    "check": "tsc --noEmit && bun biome ci && bun start sync",
-    "release": "bun check && bun b && npm publish"
+    "b": "bun scripts/delete-dist.ts && tsc",
+    "lint": "biome check --write",
+    "format": "biome format --write",
+    "check": "tsc --noEmit && bun biome check && bun start sync",
+    "release": "bun check && bun b && bun scripts/release.ts"
   },
   "dependencies": {
     "@commander-js/extra-typings": "^14.0.0",
+    "@napi-rs/keyring": "^1.2.0",
     "@octokit/auth-oauth-device": "^8.0.3",
     "@octokit/rest": "^22.0.1",
     "commander": "^14.0.2",
     "detect-indent": "^7.0.2",
-    "dotenv": "^17.2.3",
     "env-paths": "^3.0.0",
     "make-fetch-happen": "^15.0.3",
     "open": "^11.0.0",
@@ -54,11 +55,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
+    "@inquirer/prompts": "^8.0.2",
+    "@types/bun": "^1.3.3",
     "@types/make-fetch-happen": "^10.0.4",
     "@types/node": "^24.10.1",
     "@types/parse-json": "^7.0.0",
-    "cpy-cli": "^6.0.0",
-    "del-cli": "^7.0.0",
+    "@types/semver": "^7.7.1",
+    "semver": "^7.7.3",
     "type-fest": "^5.2.0",
     "typescript": "^5.9.3"
   },
