--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: oven-sh/setup-bun@v2
-      - run: bun install
-      - run: bun check
+      - run: bun ci
+      - run: bun run ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
