--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint": "biome check --write",
     "format": "biome format --write",
     "check": "tsc --noEmit && bun biome check && bun start sync",
+    "ci": "biome ci && tsc --noEmit && bun start sync",
     "release": "bun check && bun b && bun scripts/release.ts"
   },
   "dependencies": {
