correct yaml example
files inside an archive should be in object format, not array

inputting `-` before the file makes it an array

--- a/examples/vendor.yml
+++ b/examples/vendor.yml
@@ -9,5 +9,10 @@ vendorDependencies:
       - '{release}/fzf-{version}-windows_amd64.zip':
           - fzf.exe
       - '{release}/fzf-{version}-windows_amd64.zip':
-          - fzf.exe: custom-fzf.exe
+          fzf.exe: custom-fzf.exe
     vendorFolder: '{vendorFolder}/fzf-yml'
+  micro:
+    repository: https://github.com/zyedidia/micro
+    files:
+      - '{release}/micro-{version}-win64.zip':
+          micro-{version}/micro.exe: micro.exe
